samples/_failures_safe/1761197736_62a2b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_abd65789.c:155:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  155 | void parser_adv
      | ^~~~
